Word wrapping fixed

--- a/web/src/main/webapp/static/css/styles.css
+++ b/web/src/main/webapp/static/css/styles.css
@@ -65,7 +65,7 @@ body #raamit-header .header-content {
     color: #06526b;
     font-size: 12px;
     width: 20em;
-    word-wrap: break-word;
+    word-break: break-all;
 }
 
 #table-settings tbody:hover tr:hover {
